# ChronoCherish

./: .gitignore  App.fs  Cargo.toml  ChronoCherish.fsproj  ChronoCherish.sln  Dioxus.toml  LICENSE  Program.fs  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
assets/css/: tailwind.css
assets/i18n/: en-US.ftl  zh-CN.ftl
src/: App.fs  Program.fs  main.rs  routes.rs
src/components/: calendar.rs  language_selector.rs  milestone_form.rs  mod.rs  navbar.rs
src/models/: anniversary.rs  app_state.rs  app_state_data.rs  milestone.rs  mod.rs  states.rs
src/pages/: anniversary_list.rs  edit_milestone.rs  home.rs  milestone_list.rs  mod.rs  new_milestone.rs
src/persist/: json_state.rs  mod.rs
src/utils/: local_time.rs  mod.rs
