[package]
name = "chrono-cherish"
version = "0.1.0"
authors = ["changsun20 <110759360+changsun20@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dioxus = { version = "0.7.0-rc.0", features = ["router"] }
serde_json = "1.0.143"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1" }
time = { version = "0.3.41", features = ["serde", "local-offset"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
