[package]
name = "chrono-cherish"
version = "0.1.0"
authors = ["changsun20 <110759360+changsun20@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-i18n = "0.4.3"
unic-langid = "0.9.1"
serde_json = "1.0.143"
time = { version = "0.3.41", features = [
    "serde",
    "local-offset",
    "macros",
    "parsing",
] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
bundle = []

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
